@@ -1,3 +1,10 @@
+openmolar (0.4.09+bzr0842-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream bugfix
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Jun 2013 10:30:30 +0100
+
+
 openmolar (0.4.09+bzr0840-0~__DIST__0) __DIST__; urgency=low
 
   * upstream changes
